pterodactyl_panel: add nginx as a webserver option
This commit introduces NGINX + php-fpm as an alternative webserver stack
instead of apache2.
This is only intended for new installations - switching the option
on an existing install probably won't work.
The default remains apache to preserve backwards compatibility.

Fixes #220

--- a/roles/pterodactyl_panel/handlers/main.yml
+++ b/roles/pterodactyl_panel/handlers/main.yml
@@ -10,6 +10,11 @@
     name: apache2
     state: restarted
 
+- name: Restart nginx
+  systemd:
+    name: nginx
+    state: restarted
+
 - name: Restart schedule service
   systemd:
     name: pterosched.service
