pterodactyl_panel: remove upstream composer install logic
Fixes #157. Note that existing composer installations are not removed to preserve compatibility, so this will only affect new installs

--- a/roles/pterodactyl_panel/tasks/panel_deps.yml
+++ b/roles/pterodactyl_panel/tasks/panel_deps.yml
@@ -13,30 +13,10 @@
       - php-xml
       - php-curl
       - php-zip
+      - composer
       - curl
       - unzip
       - git
       - redis-server
       # Needed to ensure that become_user to www-data works
       - acl
-
-- name: Look for composer executable
-  stat:
-    path: /usr/local/bin/composer
-  register: pterodactyl_panel_composer
-- name: Install composer
-  block:
-  - name: Download composer install script
-    get_url:
-      url: https://getcomposer.org/installer
-      dest: /tmp/composer
-      owner: root
-      group: root
-      mode: "640"
-  - name: Install composer # noqa no-changed-when
-    command: php /tmp/composer --install-dir=/usr/local/bin --filename=composer
-  - name: Installer script is absent
-    file:
-      path: /tmp/composer
-      state: absent
-  when: not pterodactyl_panel_composer.stat.exists
