feat: panel: allow to disable dependencies management
Users might want to manage the system dependencies themselves, e.g. using
`geerlingguy.php` and `geerlingguy.php_versions` to manage PHP packages.

This commit allow such user to enable a boolean variable to make the system
dependencies unmanaged.

The default behavior is unchanged: system dependencies are managed by
`pterodactyl.pterodactyl_panel`.

--- a/roles/pterodactyl_panel/defaults/main.yml
+++ b/roles/pterodactyl_panel/defaults/main.yml
@@ -1,6 +1,8 @@
 ---
 pterodactyl_panel_version: latest
 
+pterodactyl_panel_install_dependencies: true
+
 # Webserver
 pterodactyl_panel_webserver: "apache2"
 pterodactyl_panel_webroot: /var/www/pterodactyl
