--- a/roles/pterodactyl_panel/tasks/main.yml
+++ b/roles/pterodactyl_panel/tasks/main.yml
@@ -9,6 +9,7 @@
 
 - name: Install dependencies
   ansible.builtin.include_tasks: panel_deps.yml
+  when: pterodactyl_panel_install_dependencies | bool
 - name: Configure Redis
   ansible.builtin.include_tasks: redis.yml
 
