feat: panel: allow to disable webserver management
Users might want to manage the system dependencies themselves, e.g. using
`nginxinc.nginx_config` nginx configuration.

This commit allow such user to enable a boolean variable to make the webserver
configuration unmanaged.

The default behavior is unchanged: webserver configuration is managed by
`pterodactyl.pterodactyl_panel`.

--- a/roles/pterodactyl_panel/defaults/main.yml
+++ b/roles/pterodactyl_panel/defaults/main.yml
@@ -4,6 +4,7 @@ pterodactyl_panel_version: latest
 pterodactyl_panel_install_dependencies: true
 
 # Webserver
+pterodactyl_panel_manage_webserver: true
 pterodactyl_panel_webserver: "apache2"
 pterodactyl_panel_webroot: /var/www/pterodactyl
 pterodactyl_panel_domain: "{{ ansible_fqdn }}"
