--- a/roles/pterodactyl_panel/tasks/main.yml
+++ b/roles/pterodactyl_panel/tasks/main.yml
@@ -17,7 +17,15 @@
   ansible.builtin.package_facts:
 - name: Set php version
   ansible.builtin.set_fact:
-    _pterodactyl_panel_php_version: "{{ ((ansible_facts.packages['php'].0.version | split(':')).1 | split('+')).0 }}"
+    _pterodactyl_panel_php_version: >-
+      {{
+        (item == 'php') | ternary(
+          ansible_facts.packages[item].0.version | regex_search(':([\d\.]+)\+', '\1') | first,
+          item | regex_search('^php(\d(?:\.\d)?)', '\1') | first
+        )
+      }}
+  loop: "{{ ansible_facts.packages.keys() }}"
+  when: item | regex_search('^php(?:\d(?:\.\d)?)?$') != None
 
 - name: Prepare Panel install
   ansible.builtin.include_tasks: panel_config.yml
